--- a/src/Components/NavBar/Navbar.css
+++ b/src/Components/NavBar/Navbar.css
@@ -4,6 +4,7 @@
   display: flex;
   list-style-type: none;
   justify-content: flex-end;
+ 
 }
 
 .nav-bar li {
@@ -12,12 +13,10 @@
 
 a {
   text-decoration: none;
+  color: rgb(255, 255, 255);
 }
 
 .active {
   color: rgb(219, 124, 124);
 }
 
-.non-active {
-  color: green;
-}
