my profile page

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,14 @@
 li {
   list-style-type: none;
 }
+
+ul {
+  padding-left: 0;
+}
+
+.center-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
