Add reserve badge style

--- a/src/Components/RocketItem/RocketItem.css
+++ b/src/Components/RocketItem/RocketItem.css
@@ -33,3 +33,11 @@ button.reserved {
   color: grey;
   border: 1.5px solid grey;
 }
+
+.reserved-badge {
+  padding: 0 0.2rem;
+  background-color: #18a2b8;
+  color: white;
+  margin: 0 10px 0 0;
+  border-radius: 5px;
+}
