--- a/src/pages/MyProfile/MyProfile.css
+++ b/src/pages/MyProfile/MyProfile.css
@@ -10,3 +10,11 @@
   width: 600px;
   padding: 10px;
 }
+
+.table-item:first-child {
+  border-radius: 5px 5px 0 0;
+}
+
+.table-item:last-child {
+  border-radius: 0 0 5px 5px;
+}
